# NOD_2

./: CMakeLists.txt
.github/workflows/: test.yml  test1.yml
src/: CMakeLists.txt  NOD.cpp  NOD.h  NOD_B.cpp  NOD_B.h  main.cpp
tests/: CMakeLists.txt  test_B.cpp
